Hide fix Nav on smalll screen

--- a/main.css
+++ b/main.css
@@ -167,3 +167,9 @@ div[data-for="company"] {
 .snip-layout {
 	border-radius: 10px;
 }
+
+@media only screen and (max-width: 1026px) {
+    #fadeshow1 {
+        display: none;
+    }
+}
